seminar 3 changes
