# src/main/java/ru/tinkoff/edu/java/t2_seminar2/controller/UserController.java
@@ -1,9 +1,11 @@
 package ru.tinkoff.edu.java.t2_seminar2.controller;
 
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
+import ru.tinkoff.edu.java.t2_seminar2.model.UserList;
 import ru.tinkoff.edu.java.t2_seminar2.service.UserService;
 
 @RestController
