# src/main/java/ru/tinkoff/edu/java/t2_seminar2/dto/UserList.java
@@ -1,6 +1,0 @@
-package ru.tinkoff.edu.java.t2_seminar2.dto;
-
-import java.util.List;
-
-public record UserList(List<User> users) {
-}
